Fix navbar btn spacing

--- a/client/src/Styles/Navbar.css
+++ b/client/src/Styles/Navbar.css
@@ -36,6 +36,7 @@
   border: 1px solid #fff;
   background-color: #333333;
   color: #fff;
+  margin-left: 1rem;
   padding: 6px 12px 6px 12px;
   border-radius: 5px;
   font-size: 12px;
